tests/error/linear_errors/implicit_copy_nested.err
Error: Copy violation (at $FILE:20:8)
   | 
18 | def test(s: MyStruct) -> None:
19 |     p = s.x
20 |     use(s.x)
   |         ^^^ Field `s.x` with non-copyable type `array[int, 1]` cannot be
   |             consumed ...
   | 
19 |     p = s.x
   |         --- since it was already moved here

Help: Consider copying `s.x` instead of moving it: `s.x.copy()`

Guppy compilation failed due to 1 previous error
